--- a/NetworkFrameStudy/src/main/res/values/strings.xml
+++ b/NetworkFrameStudy/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="okhttp">OkHttp</string>
+    <string name="androidasynchttp">AndroidAsyncHttp</string>
     <string name="title_activity_okhttp">OkHttp</string>
     <string name="title_activity_okhttpdemo">OkHttpDemo</string>
 </resources>
