添加Retrofit和xUtils3网络示例demo

--- a/NetworkFrameStudy/src/main/res/values/strings.xml
+++ b/NetworkFrameStudy/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="okhttp">OkHttp</string>
     <string name="androidasynchttp">AndroidAsyncHttp</string>
+    <string name="retrofit">Retrofit</string>
+    <string name="xutils3">xUtils3</string>
     <string name="title_activity_okhttp">OkHttp</string>
     <string name="title_activity_okhttpdemo">OkHttpDemo</string>
 </resources>
